--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,7 @@
 body {
   background-color: #E8ECEF;
+
+
 }
 
 .centered {
@@ -12,4 +14,7 @@ body {
   font-size: 2rem;
   color: #fff;
   background-color: #000;
+  display: inline-block;
+  padding: 12px;
+  margin: 10px;
 }
